# ElectionSim

./: .env.example  .gitignore  ElectionSim_Project_Architecture.pptx  README.md  candidates_13_24.csv  docker-compose.yml  parse_all.py  parse_tokyo.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: data_fetch.py  districts.py  manifesto.py  news.py  personas.py  predictions.py  prompts.py  proportional.py  router.py  simulation.py  youtube.py
backend/app/data/: candidates.csv  districts_sample.json  parties.json  prefecture_coordinates.json  prefectures.json  proportional_blocks.json
backend/app/db/: seed.py  seed_predictions.py  seed_youtube_news.py  session.py
backend/app/models/: __init__.py  candidate.py  district.py  news.py  party.py  prediction.py  prediction_history.py  proportional_block.py  youtube.py
backend/app/prompts/: perplexity_news.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: candidate.py  district.py  manifesto.py  news.py  party.py  prediction.py  proportional.py  simulation.py  youtube.py
backend/app/services/: claude_service.py  experiment_comparison.py  experiment_manager.py  grok_service.py  news_fetcher.py  openrouter_client.py  perplexity_service.py  prediction_pipeline.py  youtube_fetcher.py
backend/app/services/simulation/: __init__.py  demographic_persona_generator.py  engine.py  llm_voter.py  persona_generator.py  prompts.py  result_aggregator.py  validators.py  vote_calculator.py  weather_service.py
backend/app/utils/: json_parser.py  logger.py  rate_limiter.py
(+340 files in other folders)
